# collectd-agent

./: .gitignore  AUTHORS  ChangeLog  README  clean.sh  configure.ac
examples/: example.conf
src/: DESIGN  Makefile.am  agent.c  agent.h  agent_helper.c  agent_helper.h  client.c  client.h  common.c  common.h  data.h  main.c  parser.y  scanner.l  settings.h
